[gd_scene load_steps=51 format=3 uid="uid://btvwkavyvmnu7"]

[ext_resource type="FontFile" uid="uid://d1q2mwgmv85fn" path="res://Fuentes/undertale-deltarune-text-font-extended.ttf" id="2_6d3hj"]
[ext_resource type="Texture2D" uid="uid://b83q188gy46ly" path="res://Sprites/HUD/black2.png" id="2_tlft2"]
[ext_resource type="Texture2D" uid="uid://d0uo1xiky7236" path="res://Sprites/Menus/GameOver/Corazon .png" id="3_hqjqx"]
[ext_resource type="Script" path="res://Scripts/Menu/Gameover.gd" id="4_etfql"]
[ext_resource type="Script" path="res://Scripts/Jugador/CorazonMov.gd" id="4_jihgq"]
[ext_resource type="Script" path="res://Scripts/Jugador/RalsVoz.gd" id="6_k23cm"]
[ext_resource type="Texture2D" uid="uid://dq05tgeqtg45q" path="res://Sprites/Menus/GameOver/Coralsei.png" id="7_bkesc"]
[ext_resource type="AudioStream" uid="uid://cocchonie8s3u" path="res://Sonidos/GameOver/Ralsei Dialogue.wav" id="7_sfmnc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ki5n1"]
atlas = ExtResource("3_hqjqx")
region = Rect2(0, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5pri"]
atlas = ExtResource("3_hqjqx")
region = Rect2(640, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpx35"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1280, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1oq6"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1920, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y2ql"]
atlas = ExtResource("3_hqjqx")
region = Rect2(2560, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8cnb"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3200, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjgx8"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3840, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_de0xn"]
atlas = ExtResource("3_hqjqx")
region = Rect2(4480, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr3fm"]
atlas = ExtResource("3_hqjqx")
region = Rect2(0, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy6t3"]
atlas = ExtResource("3_hqjqx")
region = Rect2(640, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko1ia"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1280, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_iufgn"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1920, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mwju"]
atlas = ExtResource("3_hqjqx")
region = Rect2(2560, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxh8t"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3200, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hjlf"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3840, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkmoq"]
atlas = ExtResource("3_hqjqx")
region = Rect2(4480, 360, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5vbc"]
atlas = ExtResource("3_hqjqx")
region = Rect2(0, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uv3s"]
atlas = ExtResource("3_hqjqx")
region = Rect2(640, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytil8"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1280, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssoqx"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1920, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_5chsk"]
atlas = ExtResource("3_hqjqx")
region = Rect2(2560, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mc2a"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3200, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_jff85"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3840, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_eydsc"]
atlas = ExtResource("3_hqjqx")
region = Rect2(4480, 720, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0xwl"]
atlas = ExtResource("3_hqjqx")
region = Rect2(0, 1080, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6h7d"]
atlas = ExtResource("3_hqjqx")
region = Rect2(640, 1080, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpe1u"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1280, 1080, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4igf"]
atlas = ExtResource("3_hqjqx")
region = Rect2(1920, 1080, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_72ve7"]
atlas = ExtResource("3_hqjqx")
region = Rect2(2560, 1080, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm6s3"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3200, 1080, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_byk1y"]
atlas = ExtResource("3_hqjqx")
region = Rect2(3840, 1080, 640, 360)

[sub_resource type="SpriteFrames" id="SpriteFrames_0n0vv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5pri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpx35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1oq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y2ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8cnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjgx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de0xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr3fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy6t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko1ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iufgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mwju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxh8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hjlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkmoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5vbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uv3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytil8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssoqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5chsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mc2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jff85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eydsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0xwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6h7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpe1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4igf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72ve7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm6s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byk1y")
}],
"loop": false,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4csf0"]
size = Vector2(176.031, 144.204)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v68lx"]
size = Vector2(46.1547, 48.1247)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csm0m"]
size = Vector2(263.999, 100.509)

[sub_resource type="Animation" id="Animation_0qflf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Game3:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_aanos"]
resource_name = "text"
length = 2.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Game3:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.99001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_xj3mc"]
resource_name = "textback"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Game3:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.89, 4.97),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvdnk"]
_data = {
"RESET": SubResource("Animation_0qflf"),
"text": SubResource("Animation_aanos"),
"textback": SubResource("Animation_xj3mc")
}

[sub_resource type="Animation" id="Animation_cjut8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Corazon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Corazon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(783, 383.995)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Corazon:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2ou17"]
resource_name = "romper"
length = 3.60001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Corazon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.696581, 2.04002, 2.09255, 2.13867, 2.18248, 2.23652, 2.28076, 2.33475, 2.3805, 2.43788, 2.48846, 2.54003, 2.5853, 2.64093, 2.68557, 2.73762, 2.78482, 2.84123),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 7, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Corazon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Corazon:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.02593, 2.79308),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wqppw"]
_data = {
"RESET": SubResource("Animation_cjut8"),
"romper": SubResource("Animation_2ou17")
}

[node name="GameOver" type="Node2D"]
scale = Vector2(1.2, 1.2)
script = ExtResource("4_etfql")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2003.0
offset_bottom = 1885.0
scale = Vector2(0.85, 0.5)
texture = ExtResource("2_tlft2")
metadata/_edit_use_anchors_ = true

[node name="Corazon" type="AnimatedSprite2D" parent="."]
position = Vector2(783, 383.995)
sprite_frames = SubResource("SpriteFrames_0n0vv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1612.0
offset_bottom = 943.0
metadata/_edit_use_anchors_ = true

[node name="Indiciaciones" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.134246
anchor_top = 0.183116
anchor_right = 0.144171
anchor_bottom = 0.346425
offset_left = -206.404
offset_top = -162.679
offset_right = 0.596237
offset_bottom = 0.32135
theme_override_fonts/normal_font = ExtResource("2_6d3hj")
theme_override_font_sizes/normal_font_size = 25
text = "Utiliza las flechas para desplazarte

\"z\" Para confirmar"
scroll_active = false
visible_characters_behavior = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="Control" groups=["corazon"]]
script = ExtResource("4_jihgq")

[node name="Coralsei" type="Sprite2D" parent="Control/CharacterBody2D"]
position = Vector2(807, 801.075)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_bkesc")

[node name="Area" type="Area2D" parent="Control/CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/CharacterBody2D/Area"]
position = Vector2(805.745, 798.833)
shape = SubResource("RectangleShape2D_4csf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/CharacterBody2D"]
position = Vector2(806.242, 798.364)
shape = SubResource("RectangleShape2D_v68lx")

[node name="Game" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.028536
anchor_top = -0.141328
anchor_right = -0.028536
anchor_bottom = -0.141328
offset_left = 504.0
offset_top = 61.0857
offset_right = 1181.0
offset_bottom = 426.086
theme_override_fonts/normal_font = ExtResource("2_6d3hj")
theme_override_font_sizes/normal_font_size = 250
text = "GAME"
scroll_active = false
visible_characters_behavior = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Over" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0223325
anchor_top = -0.139202
anchor_right = -0.0223325
anchor_bottom = -0.139202
offset_left = 619.0
offset_top = 335.797
offset_right = 1051.0
offset_bottom = 575.797
theme_override_fonts/normal_font = ExtResource("2_6d3hj")
theme_override_font_sizes/normal_font_size = 150
text = "OVER"
scroll_active = false
visible_characters_behavior = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Game3" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0390819
anchor_top = -0.107306
anchor_right = -0.0390819
anchor_bottom = -0.107306
offset_left = 378.0
offset_top = 575.418
offset_right = 1413.0
offset_bottom = 792.418
theme_override_fonts/normal_font = ExtResource("2_6d3hj")
theme_override_font_sizes/normal_font_size = 50
text = "No te rindas... 
aun puedes volverlo a intentar"
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Menu" type="RichTextLabel" parent="Control"]
modulate = Color(0.380392, 0.380392, 0.380392, 1)
layout_mode = 0
offset_left = 344.0
offset_top = 770.0
offset_right = 536.0
offset_bottom = 850.0
theme_override_fonts/normal_font = ExtResource("2_6d3hj")
theme_override_font_sizes/normal_font_size = 35
text = "Revivir
"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Area1" type="Area2D" parent="Control/Menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Menu/Area1"]
position = Vector2(81.9993, 48.275)
shape = SubResource("RectangleShape2D_csm0m")

[node name="Menu2" type="RichTextLabel" parent="Control"]
modulate = Color(0.380392, 0.380392, 0.380392, 1)
layout_mode = 0
offset_left = 1104.0
offset_top = 770.0
offset_right = 1200.0
offset_bottom = 850.0
theme_override_fonts/normal_font = ExtResource("2_6d3hj")
theme_override_font_sizes/normal_font_size = 35
text = "Menu
"
metadata/_edit_use_anchors_ = true

[node name="Area2" type="Area2D" parent="Control/Menu2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Menu2/Area2"]
position = Vector2(81.9993, 48.275)
shape = SubResource("RectangleShape2D_csm0m")

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="RalsVoz" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_sfmnc")
volume_db = 10.0
script = ExtResource("6_k23cm")

[node name="texto" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mvdnk")
}

[node name="corazon" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wqppw")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(194.18, 51.9077)
scale = Vector2(2.29453, 1.34605)
polygon = PackedVector2Array(610.146, 625.668, 610.146, -35.7525, -125.516, -35.7525, -125.516, -89.3811, 665.931, -89.3811, 665.931, 697.173, -125.516, 697.173, -125.516, -35.7525, -83.6772, -35.7525, -83.6772, 625.668)

[connection signal="body_entered" from="Control/Menu/Area1" to="." method="_on_area_1_body_entered"]
[connection signal="body_exited" from="Control/Menu/Area1" to="." method="_on_area_1_body_exited"]
[connection signal="body_entered" from="Control/Menu2/Area2" to="." method="_on_area_2_body_entered"]
[connection signal="body_exited" from="Control/Menu2/Area2" to="." method="_on_area_2_body_exited"]
